# adaptive-negotiation-agent

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt
.githooks/: pre-commit
.github/: pull_request_template.md
.github/workflows/: ci.yml
dynamic_strategy_buysell/: README.md  __init__.py  dynamic_strategy_agent.py  run_dynamic_strategy_buysell.py
results/experiments/run_20260303_103307/: analysis.csv  config.json
results/experiments/run_20260303_103307/vs_friendly/run_1/baseline/: results.json
results/experiments/run_20260303_103307/vs_friendly/run_1/profiler/: results.json
results/experiments/run_20260303_103307/vs_hardball/run_1/baseline/: results.json
results/experiments/run_20260303_103307/vs_hardball/run_1/profiler/: results.json
results/experiments/run_20260303_103307/vs_neutral/run_1/baseline/: results.json
results/experiments/run_20260303_103307/vs_neutral/run_1/profiler/: results.json
results/experiments/run_20260305_120719_seller/: config.json
results/experiments/run_20260305_125514_buyer/: config.json
scripts/: analyze_experiment.py  analyze_nlp.py  dev_baseline_buysell.py  dev_persona_buysell.py  dev_profiler_demo.py  evaluation_script.py  run_baseline_buysell.py  run_baseline_experiment.py  run_experiment.py  run_persona_buysell.py  run_profiler_buysell.py  run_profiler_buysell_dynamic.py  run_with_profiler.py
src/: constants.py  profiler_agent.py  profiler_prompt.py
tests/: test_profiler_agent.py  test_smoke.py
visualization/: viz_agent_prompt.md
(+176 files in other folders)
