[project]
name = "adaptive-negotiation-agent"
version = "0.1.0"
description = "Adaptive negotiation agent with real-time strategy detection"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0",
    "anthropic>=0.78.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.2.0",
]
